# simbench

./: .gitignore  AGENTS.md  README.md  agents.json  agents_default.toml  wave3d.py
.github/workflows/: ci.yml  toolchain-image.yml
benchmarks/common/: README.md
benchmarks/demo/: README.md
benchmarks/demo/cpp/: spec.md  task.toml
benchmarks/demo/cpp-rk2-001/: spec.md  task.toml
benchmarks/demo/f90/: spec.md  task.toml
benchmarks/demo/f90-rk2-001/: spec.md  task.toml
benchmarks/demo/py/: spec.md  task.toml
benchmarks/demo/py-add-001/: task.toml
benchmarks/demo/py-rk2-001/: spec.md  task.toml
benchmarks/magnetohydrodynamics/: README.md
benchmarks/magnetohydrodynamics/cpp-full-solver1d/: spec.md  task.toml
benchmarks/magnetohydrodynamics/cpp-full1d-00/: spec.md  task.toml
benchmarks/magnetohydrodynamics/cpp-full1d-00/workspace/: CMakeLists.txt  README.md  pyproject.toml
benchmarks/magnetohydrodynamics/cpp-full1d-00/workspace/src/: main.cpp  mhd1d.cpp
benchmarks/magnetohydrodynamics/cpp-full1d-00/workspace/tests/: test_public.py
benchmarks/magnetohydrodynamics/cpp-full1d-00/workspace/tests/cpp/: test_public.cpp
benchmarks/magnetohydrodynamics/cpp-full1d-01/: spec.md  task.toml
benchmarks/magnetohydrodynamics/cpp-hlld/: spec.md  task.toml
benchmarks/magnetohydrodynamics/cpp-hlld-00/: spec.md  task.toml
benchmarks/magnetohydrodynamics/cpp-hlld-01/: spec.md  task.toml
benchmarks/magnetohydrodynamics/cpp-hlld-01/workspace/: CMakeLists.txt  pyproject.toml
benchmarks/magnetohydrodynamics/cpp-hlld-01/workspace/src/: hlld.cpp
benchmarks/magnetohydrodynamics/cpp-hlld-01/workspace/tests/cpp/: test_public.cpp
benchmarks/magnetohydrodynamics/shared/: CMakeLists.txt  README.md
benchmarks/magnetohydrodynamics/shared/eval/: README.md  mhd1d_reference.py  mhd1d_shared.py
benchmarks/magnetohydrodynamics/shared/eval/fixtures/mhd1d/: README.md  brio_wu_fixture.json  brio_wu_reference.csv
benchmarks/magnetohydrodynamics/shared/src/: full_main.cpp  full_mhd1d.cpp  hlld.cpp  main.cpp  mhd1d.cpp  mhd1d.hpp
benchmarks/magnetohydrodynamics/shared/tests/: test_reference.py
benchmarks/magnetohydrodynamics/shared/workspace/: basic_equations.md  hlld.md  plot_solution.py
benchmarks/wave-equation-3d/: README.md
benchmarks/wave-equation-3d/cpp/: spec.md  task.toml
benchmarks/wave-equation-3d/cpp-fd3d/: spec.md  task.toml
benchmarks/wave-equation-3d/f90/: spec.md  task.toml
benchmarks/wave-equation-3d/f90-fd3d/: spec.md  task.toml
benchmarks/wave-equation-3d/py/: spec.md  task.toml
benchmarks/wave-equation-3d/py-fd3d/: spec.md  task.toml
benchmarks/wave-equation-3d/shared/: README.md
docker/: Dockerfile
docs/: development.md  run-flow.md  task-development.md  task-reference.md  toolchain.md
runner/: bench.py  config_helpers.py  docker_runner_helpers.py  execution_agent.py  execution_helpers.py  metrics_helpers.py  results_helpers.py  stream_pretty.py  task_loading_helpers.py
sample/: claude.toml  codex.toml  copilot.toml  opencode.toml
scripts/: build_image.py
test-tasks/smoke/py/: task.toml
tests/: test_config_helpers_adversarial.py  test_execution_agent_adversarial.py  test_fixture_path_relocation.py  test_import_compatibility.py  test_runner_bench.py  test_runner_bench_adversarial.py  test_runner_check_cmd.py  test_runner_cli_flow.py  test_runner_helpers.py  test_runner_results_helpers.py  test_runner_seam_adversarial.py  test_runner_smoke.py  test_runner_task_loading_adversarial.py
(+114 files in other folders)
